--- a/.dockerignore
+++ b/.dockerignore
@@ -1,36 +1,36 @@
 # flyctl launch added from .gitignore
 # dependencies (bun install)
-**\node_modules
+**/node_modules
 
 # output
-**\out
-**\dist
-**\*.tgz
+**/out
+**/dist
+**/*.tgz
 
 # code coverage
-**\coverage
-**\*.lcov
+**/coverage
+**/*.lcov
 
 # logs
-**\logs
-**\_.log
-**\report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
+**/logs
+**/_.log
+**/report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # dotenv environment variable files
-**\.env
-**\.env.development.local
-**\.env.test.local
-**\.env.production.local
-**\.env.local
+**/.env
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+**/.env.local
 
 # caches
-**\.eslintcache
-**\.cache
-**\*.tsbuildinfo
+**/.eslintcache
+**/.cache
+**/*.tsbuildinfo
 
 # IntelliJ based IDEs
-**\.idea
+**/.idea
 
 # Finder (MacOS) folder config
-**\.DS_Store
+**/.DS_Store
 fly.toml
