--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "stop:prod": "bun run src/scripts/controller.ts stop",
         "start:prod": "bun run src/scripts/controller.ts start",
+        "db:studio": "bunx drizzle-kit studio",
+        "db:push": "bunx drizzle-kit push",
         "dev": "bun --watch run src/index.ts",
         "start": "bun run src/index.ts",
         "format": "bunx biome format --write",
@@ -13,13 +15,19 @@
     },
     "devDependencies": {
         "@biomejs/biome": "2.3.11",
-        "@types/bun": "latest"
+        "@types/bun": "latest",
+        "@types/pg": "^8.16.0",
+        "drizzle-kit": "^0.31.8",
+        "tsx": "^4.21.0"
     },
     "peerDependencies": {
         "typescript": "^5"
     },
     "dependencies": {
         "discord.js": "^14.25.1",
+        "dotenv": "^17.2.3",
+        "drizzle-orm": "^0.45.1",
+        "pg": "^8.16.3",
         "remeda": "^2.33.1",
         "zod": "^4.3.5"
     }
