--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
         "typescript": "^5"
     },
     "dependencies": {
+        "@types/qrcode": "^1.5.6",
+        "date-fns": "^4.1.0",
         "discord.js": "^14.25.1",
         "dotenv": "^17.2.3",
         "drizzle-orm": "^0.45.1",
+        "drizzle-zod": "^0.8.3",
         "pg": "^8.16.3",
+        "qrcode": "^1.5.4",
         "remeda": "^2.33.1",
         "zod": "^4.3.5"
     }
