--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     },
     "devDependencies": {
         "@biomejs/biome": "2.3.11",
-        "@types/bun": "latest",
+        "@types/bun": "^1.3.9",
         "@types/pg": "^8.16.0",
+        "bun-types": "^1.3.9",
         "drizzle-kit": "^0.31.8",
         "tsx": "^4.21.0"
     },
@@ -30,6 +31,7 @@
         "dotenv": "^17.2.3",
         "drizzle-orm": "^0.45.1",
         "drizzle-zod": "^0.8.3",
+        "node-cron": "^4.2.1",
         "pg": "^8.16.3",
         "qrcode": "^1.5.4",
         "remeda": "^2.33.1",
